--- a/package.json
+++ b/package.json
@@ -1,26 +1,63 @@
 {
-	"name": "restart-ts-server-button",
-	"displayName": "Restart TS server Status Bar button",
-	"description": "The Restart TS server button on your Status Bar you didn't know you need.",
+ "name": "restart-ts-eslint-server",
+  "displayName": "Restart TS/ESLint Server",
+  "description": "The Restart TS/ESlint server button on your VS Code Status Bar",
+  "version": "1.0.0",
+  "engines": {
+    "vscode": "^1.79.0"
+  },
+  "main": "./dist/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "restart-ts-eslint-server.softRestartBothCommand",
+        "title": "Restart TS/Eslint Server"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.79.0",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.1.3",
+    "ts-loader": "^9.4.3",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1",
+    "@vscode/test-electron": "^2.3.2"
+  },
 	"keywords": [
 		"typescript",
+		"eslint",
+		"eslint server",
 		"ts server",
 		"tsserver",
 		"restart",
 		"restart tsserver",
-		"restart ts server"
+		"restart ts server",
+		"restart eslint server"
 	],
-	"version": "1.0.1",
-	"publisher": "qcz",
-	"private": true,
-	"engines": {
-		"vscode": "^1.41.0"
-	},
 	"license": "SEE LICENSE IN LICENSE.md",
 	"icon": "images/icon.png",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/qcz/vscode-restart-ts-server-button.git"
+		"url": "https://github.com/acoreyj/vscode-restart-ts-eslint"
 	},
 	"bugs": {
 		"url": "https://github.com/qcz/vscode-restart-ts-server-button/issues"
@@ -38,23 +75,5 @@
 		"onLanguage:javascriptreact",
 		"onLanguage:typescript",
 		"onLanguage:typescriptreact"
-	],
-	"main": "./dist/extension",
-	"scripts": {
-		"vscode:prepublish": "webpack --mode production",
-		"webpack": "webpack --mode development",
-		"webpack-dev": "webpack --mode development --watch"
-	},
-	"devDependencies": {
-		"@types/node": "^12.12.0",
-		"@types/vscode": "^1.32.0",
-		"ts-loader": "^8.0.1",
-		"tslint": "^5.20.1",
-		"typescript": "^3.9.7",
-		"webpack": "^4.44.0",
-		"webpack-cli": "^3.3.12"
-	},
-	"dependencies": {
-		"vscode-test": "^1.4.0"
-	}
+	]
 }
