--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"outDir": "out",
-		"target": "es2020",
-		"lib": ["ES2020"],
+		"target": "ES2020",
+		"lib": [
+			"ES2020"
+		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"esModuleInterop": true,
-		/* Strict Type-Checking Option */
-		"strict": true,   /* enable all strict type-checking options */
+		"strict": true   /* enable all strict type-checking options */
 		/* Additional Checks */
-		"noUnusedLocals": true /* Report errors on unused locals. */
-	},
-	"include": [
-		"src/**/*.ts",
-		"./node_modules/vscode/vscode.d.ts",
-		"./node_modules/vscode/lib/*",
-	]
+		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+	}
 }
