--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,15 +1,14 @@
 .vscode/**
 .vscode-test/**
-images/*.svg
-node_modules/**
-out/test/**
 out/**
+node_modules/**
 src/**
 .gitignore
-package-lock.json
-tsconfig.json
-tslint.json
+.yarnrc
 webpack.config.js
-**/*.vsix
-**/*.zip
-TODO.md
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
+
