--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
  "name": "restart-ts-eslint-server",
   "displayName": "Restart TS/ESLint Server",
-  "description": "The Restart TS/ESlint server button on your VS Code Status Bar",
-  "version": "1.0.1",
+  "description": "Add Restart TS/ESlint server buttons on your Status Bar and Restart Both in the Command Palette",
+  "version": "1.0.2",
   "publisher": "acoreyj",
   "engines": {
     "vscode": "^1.79.0"
