--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,16 +1,13 @@
 .vscode/**
 .vscode-test/**
 out/**
-node_modules/**
 src/**
 .gitignore
-.yarnrc
 webpack.config.js
-vsc-extension-quickstart.md
 **/tsconfig.json
-**/.eslintrc.json
 **/*.map
 **/*.ts
 **/*.psd
 pnpm-lock.yaml
 *.config.js
+*.config.mjs
