--- a/package.json
+++ b/package.json
@@ -1,93 +1,94 @@
 {
- "name": "ts-eslint-restarter",
- "displayName": "TS/ESLint Restarter",
- "description": "Adds Restart TS, ESLint server, and Restart Both buttons to the Status Bar and provides automatic restart functionality for ESLint when memory usage reaches a defined threshold. Also includes a command for restarting both servers from the Command Palette.",
- "version": "1.0.0",
- "publisher": "kokororin",
- "engines": {
-  "vscode": "^1.79.0"
- },
- "main": "./dist/extension.js",
- "contributes": {
-  "commands": [
-   {
-    "command": "ts-eslint-restarter.softRestartBothCommand",
-    "title": "Restart TS & ESLint Server"
-   }
-  ],
-  "configuration": {
-    "title": "TS/ESLint Restarter",
-    "type": "object",
-    "properties": {
-      "ts-eslint-restarter.eslintMaxMemory": {
-        "type": "integer",
-        "default": 3072,
-        "description": "Maximum memory (in MB) for ESLint server"
+  "name": "ts-eslint-restarter",
+  "displayName": "TS/ESLint Restarter",
+  "description": "Adds Restart TS, ESLint server, and Restart Both buttons to the Status Bar and provides automatic restart functionality for ESLint when memory usage reaches a defined threshold. Also includes a command for restarting both servers from the Command Palette.",
+  "version": "1.0.0",
+  "publisher": "kokororin",
+  "engines": {
+    "vscode": "^1.79.0"
+  },
+  "main": "./dist/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "ts-eslint-restarter.softRestartBothCommand",
+        "title": "Restart TS & ESLint Server"
+      }
+    ],
+    "configuration": {
+      "title": "TS/ESLint Restarter",
+      "type": "object",
+      "properties": {
+        "ts-eslint-restarter.eslintMaxMemory": {
+          "type": "integer",
+          "default": 3072,
+          "description": "Maximum memory (in MB) for ESLint server"
+        }
       }
     }
-  }
- },
- "scripts": {
-  "vscode:prepublish": "npm run package",
-  "compile": "webpack",
-  "watch": "webpack --watch",
-  "package": "webpack --mode production --devtool hidden-source-map",
-  "compile-tests": "tsc -p . --outDir out",
-  "watch-tests": "tsc -p . -w --outDir out",
-  "pretest": "npm run compile-tests && npm run compile && npm run lint",
-  "lint": "eslint src --ext ts",
-  "test": "node ./out/test/runTest.js"
- },
- "devDependencies": {
-  "@kokororin/prettierrc": "^0.1.1",
-  "@types/node": "^20.2.5",
-  "@types/pidusage": "^2.0.5",
-  "@types/vscode": "^1.79.0",
-  "@typescript-eslint/eslint-plugin": "^5.59.8",
-  "@typescript-eslint/parser": "^5.59.8",
-  "cron": "^3.1.7",
-  "eslint": "^8.57.0",
-  "getprocesses": "^1.1.1",
-  "pidtree": "^0.6.0",
-  "pidusage": "^3.0.2",
-  "ts-loader": "^9.4.3",
-  "typescript": "^5.1.3",
-  "webpack": "^5.85.0",
-  "webpack-cli": "^5.1.1"
- },
- "keywords": [
-  "typescript",
-  "eslint",
-  "eslint server",
-  "ts server",
-  "tsserver",
-  "restart",
-  "restart tsserver",
-  "restart ts server",
-  "restart eslint server"
- ],
- "license": "MIT",
- "icon": "images/icon.png",
- "repository": {
-  "type": "git",
-  "url": "https://github.com/kokororin/vscode-ts-eslint-restarter"
- },
- "bugs": {
-  "url": "https://github.com/kokororin/vscode-ts-eslint-restarter/issues"
- },
- "categories": [
-  "Programming Languages",
-  "Other"
- ],
- "galleryBanner": {
-  "color": "#1e415e",
-  "theme": "dark"
- },
- "activationEvents": [
-  "onLanguage:javascript",
-  "onLanguage:javascriptreact",
-  "onLanguage:typescript",
-  "onLanguage:typescriptreact"
- ],
- "packageManager": "pnpm@9.11.0"
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "lint": "eslint src",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@kokororin/prettierrc": "^0.1.1",
+    "@types/node": "^20.2.5",
+    "@types/pidusage": "^2.0.5",
+    "@types/vscode": "^1.79.0",
+    "cron": "^3.1.7",
+    "eslint": "^9.11.0",
+    "getprocesses": "^1.1.1",
+    "globals": "^15.10.0",
+    "pidtree": "^0.6.0",
+    "pidusage": "^3.0.2",
+    "ts-loader": "^9.4.3",
+    "typescript": "~5.5.0",
+    "typescript-eslint": "^8.8.0",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1"
+  },
+  "keywords": [
+    "typescript",
+    "eslint",
+    "eslint server",
+    "ts server",
+    "tsserver",
+    "restart",
+    "restart tsserver",
+    "restart ts server",
+    "restart eslint server"
+  ],
+  "license": "MIT",
+  "icon": "images/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kokororin/vscode-ts-eslint-restarter"
+  },
+  "bugs": {
+    "url": "https://github.com/kokororin/vscode-ts-eslint-restarter/issues"
+  },
+  "categories": [
+    "Programming Languages",
+    "Other"
+  ],
+  "galleryBanner": {
+    "color": "#1e415e",
+    "theme": "dark"
+  },
+  "activationEvents": [
+    "onLanguage:javascript",
+    "onLanguage:javascriptreact",
+    "onLanguage:typescript",
+    "onLanguage:typescriptreact"
+  ],
+  "packageManager": "pnpm@9.11.0"
 }
