--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,22 @@
     "lib": [
       "ES2020"
     ],
+    "rootDir": ".",
+    "strict": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "forceConsistentCasingInFileNames": true,
+    "removeComments": true,
     "sourceMap": true,
-    "rootDir": "src",
     "esModuleInterop": true,
-    "strict": true /* enable all strict type-checking options */
-    /* Additional Checks */
-    // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-    // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-    // "noUnusedParameters": true,  /* Report errors on unused parameters. */
-  }
+    "allowSyntheticDefaultImports": true,
+    "useUnknownInCatchVariables": false,
+    "skipLibCheck": true
+  },
+  "exclude": [
+    "node_modules",
+    ".vscode-test",
+    "*.config.ts"
+  ]
 }
