chore: cleanup ignores

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,13 +1,13 @@
-.github/**
-.vscode/**
-.vscode-test/**
+.*
+.**/**
 out/**
 src/**
-.gitignore
-**/tsconfig.json
+tsconfig*.json
 **/*.map
 **/*.ts
 pnpm-lock.yaml
 *.config.js
 *.config.mjs
-.npmrc
+*.log
+*.tgz
+*.vsix
