--- a/package.json
+++ b/package.json
@@ -35,6 +35,15 @@
     "clean": "rimraf dist",
     "lint": "eslint src"
   },
+  "dependencies": {
+    "cron": "^3.1.7",
+    "getprocesses": "^1.1.1",
+    "luxon": "~3.4.0",
+    "pidtree": "^0.6.0",
+    "pidusage": "^3.0.2",
+    "winston": "^3.15.0",
+    "winston-transport-vscode": "^0.1.0"
+  },
   "devDependencies": {
     "@antfu/ni": "^0.23.0",
     "@eslint/js": "^9.12.0",
@@ -42,19 +51,12 @@
     "@types/node": "^20.2.5",
     "@types/pidusage": "^2.0.5",
     "@types/vscode": "^1.79.0",
-    "cron": "^3.1.7",
     "eslint": "^9.11.0",
-    "getprocesses": "^1.1.1",
     "globals": "^15.10.0",
-    "luxon": "~3.4.0",
-    "pidtree": "^0.6.0",
-    "pidusage": "^3.0.2",
     "rimraf": "^6.0.1",
     "tsup": "^8.3.0",
     "typescript": "~5.5.0",
-    "typescript-eslint": "^8.8.0",
-    "winston": "^3.15.0",
-    "winston-transport-vscode": "^0.1.0"
+    "typescript-eslint": "^8.8.0"
   },
   "keywords": [
     "typescript",
