--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@antfu/ni": "^0.23.0",
     "@eslint/js": "^9.12.0",
     "@kokororin/prettierrc": "^0.1.1",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.2.5",
     "@types/pidusage": "^2.0.5",
     "@types/vscode": "^1.79.0",
